feat(openapi): added controller new endpoint /helpdesk/searchPaymentMethods
