# api-spec/openapi.yaml
@@ -207,6 +207,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemJson'
+  /helpdesk/searchPaymentMethods:
+    post:
+      tags:
+        - helpDesk
+      operationId: helpDeskSearchPaymentMethods
+      summary: Search payment methods by input parameters
+      description: 'GET with body payload - no resources created'
+      requestBody:
+        $ref: "#/components/requestBodies/SearchPaymentMethodRequest"
+      responses:
+        '200':
+          description: Payment methods found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchPaymentMethodResponse'
+        '400':
+          description: Formally invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
+        '404':
+          description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
 components:
   schemas:
     ProblemJson:
